...
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <Button
        android:id="@+id/viewFundingAccountsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewFunding"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
...
