...
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/insertName"
        android:inputType="textPersonName"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/researchAssistantBox"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="11dp"
        android:layout_marginRight="16dp"/>


    <Button
...
